# Sincerin

./: BENCHMARKS.md
circuits/: .bb-version  BENCHMARKS.md  PROOF_FORMAT.md  artifacts.json  benchmark.sh  registry.json
circuits/noir/proof-of-age/: Nargo.toml  Prover.toml  Verifier.toml
circuits/noir/proof-of-membership/: Nargo.toml  Prover.toml  Verifier.toml
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol
contracts/src/: Coordinator.sol  ProofRegistry.sol  ProverRegistry.sol
contracts/src/interfaces/: ICoordinator.sol  IProofRegistry.sol  IProverRegistry.sol
contracts/test/: Coordinator.t.sol  ProofRegistry.t.sol  ProverRegistry.t.sol
contracts/test/helpers/: TestUtils.sol
contracts/test/integration/: CoordinatorIntegration.t.sol  GasBenchmark.t.sol  ProofRegistryIntegration.t.sol  README.md
l1/: .avalanche-golangci.yml  .goreleaser.yml  go.mod  go.sum
l1/cmd/precompilegen/: main.go
l1/commontype/: fee_config.go
l1/consensus/: consensus.go
l1/consensus/dummy/: consensus.go
l1/core/: bench_test.go  block_validator.go  blockchain.go  blockchain_ext_test.go  blockchain_log_test.go  blockchain_reader.go  blockchain_repair_test.go  blockchain_snapshot_test.go  blockchain_test.go  bloom_indexer.go  chain_makers.go  chain_makers_test.go  evm.go  gen_genesis.go  genesis.go  genesis_extra_test.go  genesis_test.go  headerchain.go  headerchain_test.go  main_test.go  mkalloc.go  predicate_check.go  predicate_check_test.go  rlp_test.go  state_manager.go  state_processor.go  state_processor_ext.go  state_processor_ext_test.go  state_processor_test.go  state_transition.go  trie_stress_bench_test.go  txindexer_test.go
l1/core/extstate/: database.go  database_test.go  firewood_database.go  options.go  statedb.go
l1/core/state/: trie_prefetcher_extra_test.go
l1/core/txpool/: subpool.go  txpool.go  validation.go
l1/crypto/poseidon2/: constants.go  debug_test.go  poseidon2.go  poseidon2_test.go
l1/crypto/smt/: smt.go  smt_test.go
l1/eth/: api_admin.go  api_backend.go  api_debug.go  api_debug_test.go  backend.go  chain_with_final_block.go  state_accessor.go
l1/eth/ethconfig/: config.go  gen_config.go
l1/eth/filters/: api.go  api_test.go  bench_test.go  filter.go  filter_system.go  filter_system_test.go  filter_test.go
l1/eth/gasestimator/: gasestimator.go
l1/eth/gasprice/: fee_info_provider.go  fee_info_provider_test.go  feehistory.go  feehistory_test.go  gasprice.go  gasprice_test.go
l1/eth/tracers/: api.go  api_extra_test.go  api_test.go  tracers_test.go
l1/ethclient/: ethclient.go
l1/ethclient/simulated/: backend.go  backend_test.go  options.go  options_test.go
l1/ethclient/subnetevmclient/: subnet_evm_client.go
l1/examples/sign-uptime-message/: main.go
l1/genesis/: genesis_test.go  testnet.json
l1/internal/debug/: flags.go
l1/internal/ethapi/: api.go  api_extra.go  api_extra_test.go  api_test.go  backend.go  errors.go  mocks_test.go  transaction_args.go  transaction_args_test.go
l1/internal/flags/: helpers.go
l1/internal/version/: version.go
l1/miner/: miner.go  ordering.go  ordering_test.go  worker.go
l1/network/: network.go  network_test.go  waiting_handler.go
l1/node/: api.go  node.go
l1/params/: config.go  config_extra.go  config_extra_test.go  config_libevm.go  config_test.go  hooks_libevm.go
l1/params/extras/: config.go  config_extra_test.go  config_test.go  network_upgrades.go  network_upgrades_test.go  precompile_config_test.go  precompile_upgrade.go  precompile_upgrade_test.go  precompiles.go  rules.go  state_upgrade_test.go
l1/params/paramstest/: forks.go
l1/plugin/: main.go
l1/plugin/evm/: admin.go  block_builder.go  block_builder_test.go  block_test.go  eth_gossiper.go  gossip_test.go  gossiper_eth_gossiping_test.go  imports_test.go  libevm.go  network_handler.go  service.go  syncervm_test.go  tx_gossip_test.go  vm.go  vm_database.go  vm_test.go  vm_upgrade_bytes_test.go  vm_warp_test.go  wrapped_block.go
l1/plugin/runner/: runner.go
l1/rpc/: client_opt_test.go  subscription_test.go
l1/stateupgrade/: state_upgrade.go
l1/tests/: init.go  state_test_util.go
l1/warp/: backend_test.go  client.go  service.go  verifier_backend.go  verifier_backend_test.go
orchestration/: .gitignore  Cargo.toml
orchestration/.claude/agent-memory/system-engineer/: MEMORY.md
orchestration/collector/: Cargo.toml
orchestration/collector/src/: collector.rs  config.rs  consumer.rs  errors.rs  l1_verifier.rs  lib.rs  main.rs  metrics.rs  registry.rs
orchestration/common/: Cargo.toml
orchestration/common/src/: config.rs  errors.rs  l1_client.rs  lib.rs  metrics.rs  nats.rs  nats_consumers.rs  nats_streams.rs
orchestration/common/src/types/: circuit.rs  mod.rs  privacy.rs  proof_request.rs  prover.rs
orchestration/common/tests/: integration_tests.rs
orchestration/dispatcher/: Cargo.toml
orchestration/dispatcher/src/: config.rs  consumer.rs  errors.rs  lib.rs  main.rs  priority.rs  router.rs  strategy.rs
orchestration/dispatcher/tests/: consumer_test.rs  integration_test.rs  router_test.rs
orchestration/dispatcher/tests/helpers/: mod.rs
orchestration/gateway/: Cargo.toml
orchestration/gateway/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
orchestration/gateway/src/auth/: api_key.rs  mod.rs
orchestration/gateway/src/middleware/: rate_limit.rs
orchestration/gateway/src/routes/: circuits.rs  health.rs  mod.rs  prove.rs  status.rs
orchestration/gateway/src/ws/: handler.rs
orchestration/gateway/tests/: auth_test.rs  circuits_test.rs  health_test.rs  prove_test.rs  rate_limit_test.rs  status_test.rs  ws_test.rs
orchestration/gateway/tests/helpers/: mod.rs
orchestration/prover-node/: Cargo.toml
orchestration/prover-node/src/: config.rs  consumer.rs  errors.rs  executor.rs  heartbeat.rs  lib.rs  main.rs
orchestration/prover-node/src/backends/: barretenberg.rs  mod.rs
orchestration/prover-node/tests/: consumer_test.rs  executor_test.rs  heartbeat_test.rs
orchestration/prover-node/tests/helpers/: mod.rs
(+230 files in other folders)
