[workspace]
members = [
    "common",
    "gateway",
    "dispatcher",
    "collector",
    "prover-node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sincerin Team"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Message Queue
async-nats = "0.38"

# Blockchain
alloy = { version = "1.0", features = ["full"] }

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Metrics & Tracing
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Config
config = "0.14"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Identifiers
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap = "6"
tokio-util = "0.7"

# URL parsing
serde_urlencoded = "0.7"

# Streams
futures = "0.3"

# Testing
tokio-test = "0.4"
http-body-util = "0.1"
hyper = "1.6"
tokio-tungstenite = "0.26"
