[package]
name = "sincerin-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
async-nats = { workspace = true }
alloy = { workspace = true }
axum = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
