[package]
name = "sincerin-dispatcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sincerin-dispatcher"
path = "src/main.rs"

[dependencies]
sincerin-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# Message Queue
async-nats = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Config
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Concurrency
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
sincerin-common = { path = "../common" }
serde_json = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
